--- a/aspnetrun-microservices/Catalog.API/appsettings.Development.json
+++ b/aspnetrun-microservices/Catalog.API/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  {
+    "DatabaseSettings": {
+      "ConnectionString": "mongodb://localhost:27017",
+      "DatabaseName": "ProductDb",
+      "CollectionName":  "Products"
+    }
   }
 }
